# uchicagoABCDProcessing

./: .gitattributes  MANIFEST.in  README.md  REFERENCES.md  projectSetup.cfg  setup.cfg  setup.py
uchicagoABCDProcessing/: __about__.py  __init__.py  _version.py  testing.py
uchicagoABCDProcessing/cli/: build_workflow.py  run.py  run_utils.py  version.py
uchicagoABCDProcessing/config/NDATools/: settings.cfg
uchicagoABCDProcessing/interfaces/: __init__.py  awsS3.py  miNDAR.py  motion.py  oracle.py  reports.py  trim_time_series.py
uchicagoABCDProcessing/utils/: bids.py  fmriprepUtils.py  generate_bbr_svgs.py  get_subject_urls.py  sentry.py
uchicagoABCDProcessing/workflows/: base.py  datasink.py
