[metadata]
name = uchicagoABCDProcessing
url = https://github.com/enlberman/uchicagoABCDProcessing
author = Andrew Stier
author_email = andrewstier@uchicago.edu
maintainer = Andrew Stier
maintainer_email = andrewstier@uchicago.edu
description = uchicago preprocessing of abcd data
;long_description = file:long_description.rst
;long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
platforms = OS Independent
classifiers =
;    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
install_requires =
    numpy
    scipy
    nibabel >=2.1
    pandas >=0.23
    bids-validator
tests_require =
    pytest >=3.3
    mock
    pathlib ; python_version < "3.4"
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    uchicagoABCDProcessing=uchicagoABCDProcessing.cli.run:main

[options.extras_require]
analysis =
doc =
    sphinx >=2.2
    numpydoc
    m2r
    sphinx_rtd_theme
docs =
    %(doc)s
test =
    pytest >=3.3
    mock
    pathlib ; python_version < "3.4"
tests =
    %(test)s
travis_tests =
    %(test)s
    codecov
    pytest-cov
    pytest-xdist
tutorial =
    nbconvert
    jupyter_client
    ipykernel

[versioneer]
VCS = git
style = pep440
versionfile_source = uchicagoABCDProcessing/_version.py
versionfile_build = uchicagoABCDProcessing/_version.py
tag_prefix =
parentdir_prefix =

[bdist_wheel]
universal=1
